--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@eslint/js": "^9.9.1",
     "@types/node": "^20",
     "@types/react": "^18",
