--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
+    "@next/font": "^14.2.8",
     "next": "14.2.5",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "sweetalert2": "^11.13.2"
   },
   "devDependencies": {
