--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
+    "highcharts": "^11.4.8",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
