--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
+    "@highcharts/map-collection": "^2.3.0",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "next": "14.2.5",
