--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "dependencies": {
     "@highcharts/map-collection": "^2.3.0",
+    "@next/font": "^14.2.8",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
-    "@next/font": "^14.2.8",
     "next": "14.2.5",
+    "next-auth": "^4.24.8",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
