--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "highcharts-react-official": "^3.2.1",
     "next": "14.2.5",
     "next-auth": "^4.24.8",
+    "next-intl": "^3.20.0",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
