--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@highcharts/map-collection": "^2.3.0",
     "@next/font": "^14.2.8",
+    "formik": "^2.4.6",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "next": "14.2.5",
@@ -29,7 +30,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
-    "sweetalert2": "^11.13.2"
+    "sweetalert2": "^11.13.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
