--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@highcharts/map-collection": "^2.3.0",
+    "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.8",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
@@ -27,9 +28,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
-    "sweetalert2": "^11.13.2"
+    "sweetalert2": "^11.13.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
