fix(bug): fixed refresh token bug

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@highcharts/map-collection": "^2.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.8",
+    "crypto-js": "^4.2.0",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "next": "14.2.5",
@@ -38,6 +39,7 @@
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@eslint/js": "^9.9.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18",
